# webscraper-template

./: poetry_README.md  pyproject.toml
lwaudio_revamped/: basic_layout.md  builder.py  product.py  scraper.py  website_strategy.py
tests/: test_lwaudio_revamped.py
